--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2829,7 +2829,7 @@ input, select, textarea {
 /* Header */
 
 	#header {
-		padding: 8em 0 0.1em 0 ;
+		padding: 5em 0 0.1em 0 ;
 	}
 
 		#header .logo {
@@ -2856,7 +2856,7 @@ input, select, textarea {
 				#header .logo .symbol img {
 					display: block;
 					width: 10em;
-					height: 10em;
+					height: auto;
 				}
 
 		#header nav {
