--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2572,7 +2572,7 @@ input, select, textarea {
 		-webkit-flex-wrap: wrap;
 		-ms-flex-wrap: wrap;
 		flex-wrap: wrap;
-		postiion: relative;
+		position: relative;
 		margin: -2.5em 0 0 -2.5em;
 	}
 
@@ -2620,7 +2620,7 @@ input, select, textarea {
 					z-index: 1;
 					opacity: 0.8;
 				}
-
+/* 
 				.tiles article > .image:after {
 					pointer-events: none;
 					-moz-transition: opacity 0.5s ease;
@@ -2640,7 +2640,7 @@ input, select, textarea {
 					background-size: 100% 100%;
 					opacity: 0.25;
 					z-index: 2;
-				}
+				} */
 
 			.tiles article > a {
 				display: -moz-flex;
@@ -2837,7 +2837,7 @@ input, select, textarea {
 			border-bottom: 0;
 			color: inherit;
 			font-weight: 900;
-			letter-spacing: 0.25em;
+			letter-spacing: 0.20em;
 			margin: 0 0 2.5em 0;
 			text-decoration: none;
 			text-transform: uppercase;
