--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2739,7 +2739,7 @@ input, select, textarea {
 			}
 
 			.tiles article.style3 > .image:before {
-				background-color: #23C4C4;
+				background-image: url('images/data_viz.jpg');
 			}
 
 			.tiles article.style4 > .image:before {
