--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2738,13 +2738,13 @@ input, select, textarea {
 				background-color: #FFC300;
 			}
 
-			.tiles article.style3 > .image:before {
+			.tiles article.style4 > .image:before {
 				background-image: url('images/data_viz.jpg');
 			}
 
-			.tiles article.style4 > .image:before {
+			/* .tiles article.style4 > .image:before {
 				background-color: #6A8EAE;
-			}
+			} */
 
 			.tiles article.style5 > .image:before {
 				background-color: #8CB369;
