--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2731,7 +2731,7 @@ input, select, textarea {
 
 			/* different set of colors. to revert back to the original colors refer to the above script */
 			.tiles article.style1 > .image:before {
-				background-color: #FF6B6B;
+				background-image: url('images/data_science.png');
 			}
 
 			.tiles article.style2 > .image:before {
