--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2743,13 +2743,16 @@ input, select, textarea {
 			}
 
 			.tiles article.style5 > .image:before {
-				background-color: #8CB369;
+				background-image: url('images/hackathon.jpg');
 			}
 
 			.tiles article.style6 > .image:before {
-				background-color: #FF914D;
+				background-image: url('images/virtual_exp.png');
 			}
 
+			.tiles article.style3 > .image:before {
+				background-image: url('images/virtual_exp.png');
+			}
 
 
 			body:not(.is-touch) .tiles article:hover > .image {
