update index.html and main.css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2751,7 +2751,7 @@ input, select, textarea {
 			}
 
 			.tiles article.style3 > .image:before {
-				background-image: url('images/virtual_exp.png');
+				background-image: url('images/research.png');
 			}
 
 
