--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2686,7 +2686,7 @@ input, select, textarea {
 				}
 
 				.tiles article > a h2 {
-					text-shadow: 2px 2px 5px #000;
+					background-color: rgba(0, 0, 0, 0.5);
 					margin: 0;
 				}
 
@@ -2700,7 +2700,7 @@ input, select, textarea {
 					line-height: 1.5;
 					margin-top: 0.35em;
 					opacity: 0;
-					text-shadow: 2px 2px 5px #000;
+					background-color: rgba(0, 0, 0, 0.5);
 				}
 
 					.tiles article > a .content > :last-child {
