--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2860,6 +2860,7 @@ input, select, textarea {
 		padding: 2em 0 0.1em 0 ;
 	}
 
+
 		#header .logo {
 			display: block;
 			border-bottom: 0;
@@ -2870,6 +2871,12 @@ input, select, textarea {
 			text-decoration: none;
 			text-transform: uppercase;
 			display: inline-block;
+		}
+
+		#header.logo .tagline {
+			text-transform: capitalize;
+			font-size: 14px;
+			/* display: block; */
 		}
 
 			#header .logo > * {
@@ -2887,11 +2894,7 @@ input, select, textarea {
 					height: auto;
 				}
 
-				#header.logo .tagline {
-					text-transform: capitalize;
-					font-size: 14px;
-					display: block;
-				}
+
 
 
 		#header nav {
