--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2856,7 +2856,7 @@ input, select, textarea {
 
 /* Header */
 
-	#header {
+	/* #header {
 		padding: 2em 0 0.1em 0 ;
 	}
 
@@ -2893,8 +2893,44 @@ input, select, textarea {
 					width: 7em;
 					height: auto;
 				}
+ */
 
+ #header {
+	padding: 2em 0 0.1em 0;
+}
 
+#header .logo {
+	display: block;
+	border-bottom: 0;
+	color: inherit;
+	font-weight: 900;
+	letter-spacing: 0.20em;
+	margin: 0 0 2.5em 0;
+	text-decoration: none;
+	text-transform: uppercase;
+}
+
+#header .logo .tagline {
+	text-transform: capitalize; /* Makes the first letter of each word uppercase */
+	font-size: 14px; /* You can adjust this value to match your design */
+	display: block; /* Makes the tagline appear on a new line */
+	/* Add any other styling you desire */
+}
+
+#header .logo > * {
+	display: inline-block;
+	vertical-align: middle;
+}
+
+#header .logo .symbol {
+	margin-right: 0.65em;
+}
+
+#header .logo .symbol img {
+	display: block;
+	width: 7em;
+	height: auto;
+}
 
 
 		#header nav {
