--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2927,7 +2927,7 @@ input, select, textarea {
 				}
 					#header .logo .text-content {
 						display: flex;
-						flex-direction: column; /* Stacks the title and tagline */
+						flex-direction: row; /* Stacks the title and tagline */
 						justify-content: center; /* Center-aligns vertically */
 					}
 						#header .logo .tagline {
