--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2933,7 +2933,7 @@ input, select, textarea {
 						#header .logo .tagline {
 							text-transform: capitalize; /* Makes the first letter of each word uppercase */
 							font-size: 17px; /* You can adjust this value to match your design */
-
+							display: block;
 							/* Add any other styling you desire */
 						}
 
