--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2929,7 +2929,7 @@ input, select, textarea {
 
 						#header .logo .tagline {
 							text-transform: capitalize; /* Makes the first letter of each word uppercase */
-							font-size: 14px; /* You can adjust this value to match your design */
+							font-size: 1em; /* You can adjust this value to match your design */
 							vertical-align: middle;
 						}
 
